# 574_assignment_3

./: trevlabz_hlsyn.tgz
assignment3_testfiles/: hls_lat_test1.v  hls_lat_test2.v  hls_lat_test3.v  hls_lat_test4.v  hls_lat_test5.v  hls_lat_test6.v  hls_test1.v  hls_test2.v  hls_test3.v  hls_test4.v  hls_test5.v  hls_test6.v  hls_test7.v  test_if1.v  test_if2.v  test_if3.v  test_if4.v
assignment3_testfiles_full/standard_tests/: hls_testa.c
hlsyn/: CMakeLists.txt  README.txt
hlsyn/hlsyn/: CMakeLists.txt  general.cpp  general.h  hlsyn.cpp  hlsyn.h  node.cpp  node.h
hlsyn/src/: CMakeLists.txt  general.cpp  general.h  hlsyn.cpp  node.cpp  node.h
testing/assignment3_test/: assignment3_test.xpr
testing/assignment3_test/assignment3_test.cache/wt/: gui_handlers.wdf  java_command_handlers.wdf  synthesis.wdf  webtalk_pa.xml
testing/assignment3_test/assignment3_test.runs/.jobs/: vrs_config_12.xml  vrs_config_4.xml
testing/assignment3_test/assignment3_test.runs/impl_1/: .init_design.begin.rst  .vivado.begin.rst  HLSM.tcl  HLSM.vdi  HLSM_drc_opted.rpt  HLSM_drc_opted.rpx  HLSM_opt.dcp  gen_run.xml  htr.txt  init_design.pb  opt_design.pb  place_design.pb  rundef.js  runme.sh  vivado.jou
testing/assignment3_test/assignment3_test.runs/synth_1/: .vivado.begin.rst  HLSM.dcp  HLSM.tcl  HLSM.vds  HLSM11.dcp  HLSM11.tcl  HLSM11.vds  HLSM11_utilization_synth.pb  HLSM11_utilization_synth.rpt  HLSM_utilization_synth.pb  HLSM_utilization_synth.rpt  gen_run.xml  htr.txt  project.wdf  rundef.js  runme.sh  vivado.jou  vivado.pb
